tests/typing/good/testfile-block-5.scala

class C() { def m() { var x = 1; { var x = 1 } } }
object Main { def main(args: Array[String]) { } }
