tests/typing/bad/testfile-context_seq2-1.scala
class A { def m() { var x: Int = 0; var x: Int = 1 } }
object Main { def main(args: Array[String]) { } }
